<resources>
    <string name="app_name">ArNavigator</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="scan">Scan</string>
    <string name="home_page">home page</string>
    <string name="sign_in">Sign in</string>
    <string name="logout">Logout</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="hit_newsletter">HIT Newsletter</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="Add_location">Add location</string>
    <string name="hit_logo">HIT Logo</string>
    <string name="out_of_bounds_can_t_show_current_location">Out of bounds , can\'t show current location</string>
    <string name="please_choose_a_place_to_navigate">Please choose a place to navigate</string>
    <string name="please_choose_where_to_add_a_location">Please choose where to add a location</string>
    <string name="back">Back</string>
    <string name="choose_from_list">Choose from list</string>
    <string name="choose_from_map">Choose from map</string>
    <string name="select_image">Please select an image</string>
    <string name="name">Name</string>
    <string name="coordinates">Coordinates</string>
    <string name="azimuth">Azimuth</string>
    <string name="low_accuracy_please_wait">Low accuracy, Please wait…</string>
    <string name="you_have_arrived">You have arrived!</string>
    <string name="exit">Exit</string>
    <string name="nevigate_again">Nevigate Again</string>
    <string name="delete_location_msg">Location deleted successfully</string>
    <string name="add_location_msg">Location added successfully</string>
    <string name="km" translatable="false">%.1f Km</string>
    <string name="meters" translatable="false">%.1f M</string>
    <string name="meters_accuracy">M</string>
    <string name="morning_msg">Good Morning,</string>
    <string name="afternoon_msg">Good Afternoon,</string>
    <string name="evening_msg">Good Evening,</string>
    <string name="signIn_Or_Create_Account">Sign In or Create Account</string>
    <string name="no_locations_available">Location data is not available</string>
    <string name="location_found">Location found</string>
    <string name="no_location_found">Location not found</string>
    <string name="accuracy">Accuracy</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="logout_msg_text">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="exit_msg_text">Are you sure you want to exit?</string>
    <string name="location_permission_msg">Location permission granted</string>
    <string name="registration_success">Registration Success</string>
    <string name="pick_an_image">Pick an image</string>
    <string name="enter_place_name">Enter place name</string>
    <string name="enter_description">Enter description</string>
    <string name="save_data">Add</string>
    <string name="view_list">View List</string>
    <string name="search">Search</string>
    <string name="are_you_sure_you_want_to_delete_this_location">Are you sure you want to delete this location?</string>
    <string name="add_place_to_map">Add this place to map?</string>
    <string name="description">Description</string>
    <string name="location_image">location image</string>
    <string name="invalid_email_or_password_please_try_again">*Invalid email or password, please try again</string>
    <string name="email">Email</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="invalid_email_or_password_please_use_an_existing_email_and_a_password_of_at_least_6_characters">*Invalid email or password, please use an existing email and a password of at least 6 characters</string>
    <string name="passwords_do_not_match">*Passwords do not match</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="fichman_gate">Fichman Gate</string>
    <string name="hoffin_gate">Hoffin Gate</string>
    <string name="golomb_gate">Golomb Gate</string>
    <string name="building_1">Building 1</string>
    <string name="building_2">Building 2</string>
    <string name="building_3_A">Building 3-A</string>
    <string name="building_3_B">Building 3-B</string>
    <string name="building_4_workshop">Building 4-Workshop</string>
    <string name="building_5">Building 5</string>
    <string name="building_6">Building 6</string>
    <string name="building_7">Building 7</string>
    <string name="building_8_A">Building 8-A</string>
    <string name="building_8_B">Building 8-B</string>
    <string name="building_8_C">Building 8-C</string>
    <string name="aguda">Aguda</string>
    <string name="cafeteria">Cafeteria</string>
    <string name="library">Library</string>
    <string name="club">Club</string>
    <string name="materials_shop">Materials Shop</string>
    <string name="dorms">Dorms</string>
    <string name="dorms_gate">Dorms Gate</string>
    <string name="unknown_location">Unknown Location</string>

    <string name="cafeteria_desc">Cafeteria</string>
    <string name="club_desc">A student\'s club in building 6</string>
    <string name="aguda_desc">The student\'s union in building 5</string>
    <string name="building_8_a_desc">The first entrance to building 8. Faculty of Science. Department of Computer Science. Department of Applied Mathematics. Auditorium </string>
    <string name="building_8_b_desc">The second entrance to building 8. Faculty of Science. Department of Computer Science. Department of Applied Mathematics. Auditorium </string>
    <string name="building_8_c_desc">The third entrance to building 8. Faculty of Science. Department of Computer Science. Department of Applied Mathematics. Auditorium </string>
    <string name="building_3_a_desc">The first entrance to building 3. Computer center. Administration building. Assembly Hall. Communication engineering laboratories.</string>
    <string name="building_3_b_desc">The second entrance to building 3. Computer center. Administration building. Assembly Hall. Communication engineering laboratories.</string>
    <string name="dorms_desc">Student\'s dorms near the parking lot and building 7</string>
    <string name="dorms_gate_desc">The closest gate to the dorms</string>
    <string name="library_desc">Top floor of building 5</string>
    <string name="fichman_gate_desc">The main entrance to HIT , in front of building 5</string>
    <string name="store_desc">A store near building 6 (floor -1)</string>
    <string name="hoffin_gate_desc">A gate near building 8 and a parking lot</string>
    <string name="building_1_desc">The Faculty of Industrial Engineering and Technology Management. The Center for Student Advancement. Logistics center. Classrooms and laboratories.</string>
    <string name="building_2_desc">Radio FM 106. Classrooms.</string>
    <string name="golomb_gate_desc">The rear gate of Hit , near building 1 and 2</string>
    <string name="building_6_desc">The Faculty of Design. Auditorium.</string>
    <string name="building_7_desc">The Faculty of Design. Design workshops.</string>
    <string name="building_4_workshop_desc">Painting workshops. Sculpture workshops</string>
    <string name="building_5_desc">The main building in HIT. Faculty of Engineering. The Faculty of Learning Technologies. The School of Multidisciplinary Studies. Academic administration. Student Association. A preparatory program. School of Diploma Studies. Library. cafeteria.</string>
    <string name="no_desc">No description</string>
    <string name="menu">menu</string>
    <string name="could_not_take_picture">Could not take a picture</string>
    <string name="camera_permission_denied">Could not take a picture , camera permission denied</string>
    <string name="accuracy_info" translatable="false" />
    <string name="wait_for_accuracy">Please wait until the GPS accuracy improves</string>


</resources>